--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
-
+        <!-- Have to explicit about models to solve the instant run issue with gradle 2.0 -->
+        <meta-data
+            android:name="AA_MODELS"
+            android:value="com.buzzardparking.buzzard.models.Place" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
