--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'org.parceler:parceler-api:1.1.1'
     apt 'org.parceler:parceler:1.1.1'
     compile 'com.parse:parse-android:1.13.1'
+    compile 'com.loopj.android:android-async-http:1.4.9'
 }
