--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     apt 'org.parceler:parceler:1.1.1'
     compile 'com.parse:parse-android:1.13.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'com.android.support:design:24.0.0'
+
 }
