--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <!-- Have to explicit about models to solve the instant run issue with gradle 2.0 -->
         <meta-data
             android:name="AA_MODELS"
-            android:value="com.buzzardparking.buzzard.models.Spot" />
+            android:value="com.buzzardparking.buzzard.models.Spot, com.buzzardparking.buzzard.models.User" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/secret_maps_api_key" />
@@ -42,7 +42,8 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activities.HistoryActivity"></activity>
+        <activity android:name=".activities.HistoryActivity" />
+        <activity android:name=".activities.SettingsActivity"></activity>
     </application>
 
 </manifest>
