--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 
 repositories {
     jcenter()
+    mavenCentral()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     maven { url "https://jitpack.io" }
 
@@ -33,6 +34,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.flipboard:bottomsheet-core:1.5.1'
     compile 'com.google.android.gms:play-services-maps:9.4.0'
     compile 'com.google.android.gms:play-services-location:9.4.0'
