--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,24 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/secret_maps_api_key" />
 
-        <activity android:name=".activities.MapActivity">
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
+        <activity android:name=".activities.MapActivity"/>
+        <service
+            android:name=".services.OverlayService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".activities.HistoryActivity" />
+        <activity android:name=".activities.SettingsActivity" />
+
+        <service android:name=".services.GeofenceTransitionsIntentService" />
+
+        <activity
+            android:name=".activities.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:theme="@style/AppTheme">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,14 +54,11 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name=".services.OverlayService"
-            android:enabled="true"
-            android:exported="true" />
-
-        <activity android:name=".activities.HistoryActivity" />
-        <activity android:name=".activities.SettingsActivity"></activity>
-        <service android:name=".services.GeofenceTransitionsIntentService"/>
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
