--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     compile 'com.parse:parse-android:1.13.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.android.support:design:24.0.0'
-
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'jp.wasabeef:picasso-transformations:2.1.0'
 }
