--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,7 @@ dependencies {
     compile 'com.parse:parse-android:1.13.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.android.support:design:24.0.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:24.1.1'
 
 }
