--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,15 +32,9 @@
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
         <activity android:name=".activities.MapActivity"/>
-        <service
-            android:name=".services.OverlayService"
-            android:enabled="true"
-            android:exported="true" />
 
         <activity android:name=".activities.HistoryActivity" />
         <activity android:name=".activities.SettingsActivity" />
-
-        <service android:name=".services.GeofenceTransitionsIntentService" />
 
         <activity
             android:name=".activities.LoginActivity"
@@ -58,6 +52,18 @@
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:label="@string/app_name" />
+
+        <service
+            android:name=".services.OverlayService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <service android:name=".services.GeofenceTransitionsIntentService" />
+        <service android:name=".services.TimerService"
+            android:exported="false"/>
+
+        <receiver android:name=".receivers.AlarmReceiver"
+            android:process=":remote"/>
     </application>
 
 </manifest>
