--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
     compile 'com.afollestad.material-dialogs:core:0.9.0.1'
+    compile 'com.android.support:cardview-v7:23.2.1'
 }
