--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,13 @@ android {
         applicationId "com.buzzardparking.buzzard"
         minSdkVersion 18
         targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
     }
     buildTypes {
+        debug {
+            minifyEnabled false
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
