--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.buzzardparking.buzzard">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -11,7 +12,7 @@
     <application
         android:name=".BuzzardApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_buzzard"
+        android:icon="@mipmap/ic_buzzard_shadow"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -55,6 +56,7 @@
         </activity>
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".activities.LoginActivity"
             android:theme="@style/AppTheme">
 
@@ -66,6 +68,7 @@
         </activity>
 
         <activity
+            tools:replace="android:theme"
             android:name="com.facebook.FacebookActivity"
             android:configChanges=
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
